--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html,body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ysabeau+SC:wght@1..1000&display=swap");
 
 * {
@@ -35,7 +42,7 @@ h1 {
 
 .App {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   background-color: rgb(12, 12, 12);
   color: white;
